# Action-Sudoku

./: ActionSudokuApp.cpp  ActionSudokuApp.h  CMakeLists.txt  README.md  main.cpp  pch.h
ActionSudokuLib/: Banner.cpp  Banner.h  CMakeLists.txt  ContainerFinder.cpp  ContainerFinder.h  Declaration.cpp  Declaration.h  DeclarationBackground.cpp  DeclarationBackground.h  DeclarationContainer.cpp  DeclarationContainer.h  DeclarationDigit.cpp  DeclarationDigit.h  DeclarationGiven.cpp  DeclarationGiven.h  DeclarationSparty.cpp  DeclarationSparty.h  DeclarationTrap.cpp  DeclarationTrap.h  DeclarationXray.cpp  DeclarationXray.h  DigitGivenFinder.cpp  DigitGivenFinder.h  FindDigitToEat.cpp  FindDigitToEat.h  FindDigitToReg.cpp  FindDigitToReg.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Item.cpp  Item.h  ItemBackground.cpp  ItemBackground.h  ItemContainer.cpp  ItemContainer.h  ItemDigit.cpp  ItemDigit.h  ItemGiven.cpp  (+25 more)
Tests/: CMakeLists.txt  EmptyTest.cpp  GameTest.cpp  ItemTest.cpp  LoadTest.cpp  SpartyTest.cpp  VisitorTest.cpp
levels/: level3.xml
